Add health check endpoints for Catalog and Provisioner in Marketplace API